style: BusiPoController 使用 Double.valueOf(0) 替代 new Double(0)